--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,23 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="춘천연합공모전동아리, 공모자들" />
 
+      <script
+         src="https://unpkg.com/react/umd/react.production.min.js"
+         crossorigin
+      ></script>
+
+      <script
+         src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+         crossorigin
+      ></script>
+
+      <script
+         src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+         crossorigin
+      ></script>
       <title>춘천연합공모전동아리, 공모자들</title>
    </head>
    <body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
    </body>
 </html>
